Setup font awesome icons

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,12 +35,14 @@
     <div class="icon-list">
       <span class="icon-item">
         <a href="{{ site.author.twitter }}" target='_blank'>
-          <svg class="icon" aria-hidden="true" role="img">
-            <use xlink:href="#icon-twitter"></use>
-          </svg>
+          <i class="fa-brands fa-twitter"></i>
         </a>
       </span>
-      <span class="icon-item">B</span>
+      <span class="icon-item">
+        <a href="{{ site.author.github }}" target='_blank'></a>
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </span>
       <span class="icon-item">C</span>
       <span class="icon-item">D</span>
     </div>
