--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="{{ site.url }}/public/favicon.ico">
+  <script src="https://kit.fontawesome.com/eba7d85c8d.js" crossorigin="anonymous"></script>
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
