--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,12 +39,30 @@
         </a>
       </span>
       <span class="icon-item">
-        <a href="{{ site.author.github }}" target='_blank'></a>
+        <a href="{{ site.author.linkedin }}" target='_blank'>
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </span>
+      <span class="icon-item">
+        <a href="{{ site.author.github }}" target='_blank'>
           <i class="fa-brands fa-github"></i>
         </a>
       </span>
-      <span class="icon-item">C</span>
-      <span class="icon-item">D</span>
+      <span class="icon-item">
+        <a href="{{ site.author.orcid }}" target='_blank'>
+          <i class="fa-brands fa-orcid"></i>
+        </a>
+      </span>
+      <span class="icon-item">
+        <a href="{{ site.author.scholar }}" target='_blank'>
+          <i class="fa-brands fa-google-scholar"></i>
+        </a>
+      </span>
+      <span class="icon-item">
+        <a href="{{ site.author.dblp }}" target='_blank'>
+          <i class="fa-solid fa-book"></i>
+        </a>
+      </span>
     </div>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
