--- a/public/css/additional.css
+++ b/public/css/additional.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     list-style: none;
-    padding: 0;
+    padding: 5px;
     margin: 0;
 }
 
