--- a/public/css/additional.css
+++ b/public/css/additional.css
@@ -15,6 +15,19 @@
     text-align: center;
 }
 
-.authorlist {
+.thesis-part {
+    font-size: 1.25rem;
+}
+
+.publication > p {
+    margin: 0 0 10px 0;
+    font-size: 18px;
+}
+
+.pub-title {
+    font-size: 1rem;
+}
+
+.pub-authors {
     font-style: italic;
 }
