Refactored image file path

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
-    <img src="me.jpg" alt="Profile picture of Julian Frattini"></img>
+    <img src="{{ site.url }}/public/img/me.jpg" alt="Profile picture of Julian Frattini"></img>
     <div class="sidebar-about">
       <h1>
         <a href="{{ site.url }}">
