--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,24 +11,23 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}" href="{{ site.url }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %}" 
+        href="{{ site.url }}">Home</a>
 
-      {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
+      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %}" 
+        href="{{ site.url }}/cv">Curriculum Vitae</a>
 
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-      {% if node.title != null %}
-      {% if node.layout == "page" %}
-      {% if node.title != "Home" %}
-      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title
-        }}</a>
-      {% endif %}
-      {% endif %}
-      {% endif %}
-      {% endfor %}
+      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %}" 
+        href="{{ site.url }}/research">Research</a>
+
+      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %} sidebar-nav-item-sub" 
+        href="{{ site.url }}/initiatives">Initiatives</a>
+
+      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %} sidebar-nav-item-sub" 
+        href="{{ site.url }}/thesis">Ph.D. Thesis</a>
+
+      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %} sidebar-nav-item-sub" 
+        href="{{ site.url }}/publications">Publications</a>
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
