--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -98,6 +98,10 @@ a.sidebar-nav-item:focus {
 .sidebar-nav-item.active {
   font-weight: bold;
 }
+.sidebar-nav-item-sub {
+  margin-left: 10px;
+  font-size: 16px;
+}
 
 /* Sticky sidebar
  *
