--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,22 +11,22 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %}" 
+      <a class="sidebar-nav-item {% if page.url == '/' %} active {% endif %}" 
         href="{{ site.url }}">Home</a>
 
-      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %}" 
+      <a class="sidebar-nav-item {% if page.url == '/cv/' %} active {% endif %}" 
         href="{{ site.url }}/cv">Curriculum Vitae</a>
 
-      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %}" 
+      <a class="sidebar-nav-item {% if page.url == '/research/' %} active {% endif %}" 
         href="{{ site.url }}/research">Research</a>
 
-      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %} sidebar-nav-item-sub" 
+      <a class="sidebar-nav-item {% if page.url == '/initiatives/' %} active {% endif %} sidebar-nav-item-sub" 
         href="{{ site.url }}/initiatives">Initiatives</a>
 
-      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %} sidebar-nav-item-sub" 
+      <a class="sidebar-nav-item {% if page.url == '/thesis/' %} active {% endif %} sidebar-nav-item-sub" 
         href="{{ site.url }}/thesis">Ph.D. Thesis</a>
 
-      <a class="sidebar-nav-item{% if page.url == site.url %} active {% endif %} sidebar-nav-item-sub" 
+      <a class="sidebar-nav-item {% if page.url == '/publications/' %} active {% endif %} sidebar-nav-item-sub" 
         href="{{ site.url }}/publications">Publications</a>
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
