--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
-    <img class="img-profile" src="{{ site.url }}/public/img/me.jpg" alt="Profile picture of Julian Frattini"></img>
+    <div class="img-container">
+      <img class="img-profile" src="{{ site.url }}/public/img/me.jpg" alt="Profile picture of Julian Frattini"></img>
+    </div>
     <div class="sidebar-about">
       <h1>
         <a href="{{ site.url }}">
