Updated double affiliation

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <p class="sidelead">{{ site.description }}</p>
     </div>
 
     <nav class="sidebar-nav">
