--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -67,7 +67,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #bf616a;
   text-decoration: none;
 }
 a strong {
@@ -76,7 +76,8 @@ a strong {
 /* `:focus` is linked to `:hover` for basic accessibility */
 a:hover,
 a:focus {
-  text-decoration: underline;
+    text-shadow: 0px 0px 3px rgba(236, 129, 28, 0.6);
+    transition: 0.3s;
 }
 
 /* Headings */
