--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,9 @@
       <a class="sidebar-nav-item {% if page.url == '/publications/' %} active {% endif %} sidebar-nav-item-sub" 
         href="{{ site.url }}/publications">Publications</a>
 
+      <a class="sidebar-nav-item {% if page.url == '/' %} active {% endif %}" 
+        href="{{ site.url }}/blog">Blog</a> 
+
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
